force-app/main/default/objects/Address__c/fields/Additional_Address__c.field-meta.xml
<CustomField>
    <fullName>Additional_Address__c</fullName>
    <label>Additional Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>