force-app/main/default/objects/Address__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ampi__Geographical_Area__c.ampi__Type__c</field>
            <operation>equals</operation>
            <value>Country</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ampi__Geographical_Area__c</referenceTo>
    <relationshipLabel>Addresses (Country)</relationshipLabel>
    <relationshipName>AddressesCountry</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>