force-app/main/default/objects/Address__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <inlineHelpText>District Name</inlineHelpText>
    <label>District</label>
    <length>250</length>
    <type>Text</type>
</CustomField>