force-app/main/default/objects/Address__c/fields/Post_Box__c.field-meta.xml
<CustomField>
    <fullName>Post_Box__c</fullName>
    <inlineHelpText>PO Box number</inlineHelpText>
    <label>Post Box</label>
    <length>30</length>
    <type>Text</type>
</CustomField>