force-app/main/default/objects/Address__c/fields/Post_Box_City__c.field-meta.xml
<CustomField>
    <fullName>Post_Box_City__c</fullName>
    <inlineHelpText>Name of City</inlineHelpText>
    <label>Post Box City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>