force-app/main/default/objects/Address__c/fields/Post_Box_Country__c.field-meta.xml
<CustomField>
    <fullName>Post_Box_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Box Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ampi__Geographical_Area__c.ampi__Type__c</field>
            <operation>equals</operation>
            <value>Country</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ampi__Geographical_Area__c</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>