force-app/main/default/objects/Address__c/fields/Post_Box_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Box_Postal_Code__c</fullName>
    <label>Post Box Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>