force-app/main/default/objects/Address__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Region</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ampi__Geographical_Area__c.ampi__Type__c</field>
            <operation>equals</operation>
            <value>Region</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ampi__Geographical_Area__c</referenceTo>
    <relationshipLabel>Addresses (Region)</relationshipLabel>
    <relationshipName>AddressesRegion</relationshipName>
    <type>Lookup</type>
</CustomField>