force-app/main/default/objects/Address__c/fields/Region_Coiuntry__c.field-meta.xml
<CustomField>
    <fullName>Region_Coiuntry__c</fullName>
    <formula>Country__r.ampi__Parent_Geographical_Area__r.Name</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>