force-app/main/default/objects/Address__c/fields/Sponsorship_name_org_legal_entity__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_name_org_legal_entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsorship Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Legal_Entity</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses3</relationshipName>
    <type>Lookup</type>
</CustomField>