force-app/main/default/objects/Address__c/fields/State_Province_District__c.field-meta.xml
<CustomField>
    <fullName>State_Province_District__c</fullName>
    <label>State/Province/District</label>
    <length>80</length>
    <type>Text</type>
</CustomField>