force-app/main/default/objects/Address__c/fields/Street_House_Number__c.field-meta.xml
<CustomField>
    <fullName>Street_House_Number__c</fullName>
    <label>Street / House Number</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>